# rust-color-brewery

./: .gitignore  Cargo.toml  Makefile  README.md
examples/: gradient.rs
src/: lib.rs  palettes.rs
src/palettes/: ty.rs
tools/: Cargo.toml  cmyk.js  colorbrewer_schemes.js
tools/src/: main.rs  matplotlib.rs
