[package]
name = "color-brewery"
version = "0.1.0"
edition = "2021"
authors = ["Christophe Troestler <christophe.troestler@umons.ac.be>"]
description = "Color palettes and gradients"
homepage = "https://github.com/Chris00/rust-color-brewery"
repository = "https://github.com/Chris00/rust-color-brewery"
documentation = "https://docs.rs/color-brewery"
license = "MIT"
keywords = ["rgb", "rgba", "bgra", "pixel", "color"]
categories = ["graphics", "multimedia::images", "visualization"]
exclude = ["/tools/", "*.org", "/biblio"]

[dependencies]
lazy_static = "1.4.0"
rgb = "0.8.35"
